2008-11-09    <vadim@vk.crocodile.org>

	* Added updated Japanese translation by Tadashi Jokagi ( elf2000 )
	from bug #2214440

	* FirewallInstallerUnx.cpp(FirewallInstallerUnx::packInstallJobsList):
	fixed a bug introduced some time earlier and reported in the bug
	report #2135827: policy installer would only copy .fwb file to the
	firewall when "Store data file on the firewall" was activated and
	skipped actual generated policy file(s) (.fw). This only happened
	on Windows.

2008-11-01  vadim  <vadim@vk.crocodile.org>

	* fwbuilder/Rule.cpp (PolicyRule::PolicyRule): a bugfix in the
	PolicyRule class, fixes errors in some operations in policy
	compilers that were caused by switch to a more efficient way to
	find rule element objects in rules.

2008-10-30  vadim  <vadim@vk.crocodile.org>

	* Added Japanese translation by Tadashi Jokagi ( elf2000 )
	Translation converted from the .po file generated for
	fwbuilder 2.1.19. Since translation was done for the old version
	of the product, it is incomplete, however at least menus seem
	to be translated.

	* ObjectIconView.cpp (ObjectIconView::event): fixed bug #2209210
	"crash in fwbuilder: ObjectIconView.cpp:90:". The GUI crashed if
	user moved mouse cursor over object icons in a group object editor
	when tooltips were activated.

2008-10-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::setRuleColor): making sure no rule
	operations are allowed when rule set or parent firewall object are
	read-only. This fixes GUI crash that happened when user tried to
	remove rule from a group in the read-only firewall.

2008-10-25  vadim  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::loadFromRCS): more
	fixes for bug #2194829: use toLocal8Bit() instead of toLatin1() in
	all calls to libfwbuilder functions that deal with
	files (FWObjectDatabase::load() etc.), as well as system functions
	such as unlink(), rename(), access(). Now I can open, save, check