@@ -1,3 +1,14 @@
+2008-11-10  vadim  <vadim@vk.crocodile.org>
+
+	* RuleSetDialog.cpp (RuleSetDialog::applyChanges): fixed bug
+	#2255591 Adding new ipv6 policy is always type "mangle". When user
+	added new Policy object to the iptables firewall and made and
+	saved any changes in the object editor (switched to "top rule set"
+	or toggled setting "filter+mangle"="mangle only"), the setting of
+	the ruleset would switch to "mangle only" and stick there. There
+	was no way to switch it back to "filter+mangle". This is fixed in
+	build 641.
+
 2008-11-09    <vadim@vk.crocodile.org>
 
 	* Added updated Japanese translation by Tadashi Jokagi ( elf2000 )
